Make chat and user dynamic

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,7 @@
       "@common/*":["./components/common/*"],
       "@pages/*": ["./components/pages/*"],
       "@components/*": ["./components/*"],
+      "@jotai/*": ["./jotai/*"],
       "@/*": ["./src/*"],
     }
   }
