--- a/package.json
+++ b/package.json
@@ -9,17 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
     "autoprefixer": "10.4.14",
+    "easymde": "^2.18.0",
+    "emoji-mart": "^5.5.2",
+    "emoji-picker-react": "^4.4.9",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "jotai": "^2.1.0",
+    "material-ui-popup-state": "^5.0.8",
     "next": "13.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "3.3.2"
   }
 }
