--- a/package.json
+++ b/package.json
@@ -9,25 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/abort-controller": "^3.329.0",
+    "@aws-sdk/client-s3": "^3.335.0",
     "@emoji-mart/data": "^1.1.2",
     "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
+    "@prisma/client": "^4.14.0",
     "autoprefixer": "10.4.14",
+    "aws-sdk": "^2.1380.0",
+    "axios": "^1.4.0",
     "easymde": "^2.18.0",
     "emoji-mart": "^5.5.2",
     "emoji-picker-react": "^4.4.9",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "formidable": "^2.1.1",
     "jotai": "^2.1.0",
     "material-ui-popup-state": "^5.0.8",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "next": "13.3.4",
+    "pg": "^8.10.0",
     "postcss": "8.4.23",
+    "prisma": "^4.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-simplemde-editor": "^5.2.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "tailwindcss": "3.3.2"
   }
 }
