--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "formidable": "^2.1.1",
     "jotai": "^2.1.0",
     "material-ui-popup-state": "^5.0.8",
+    "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "next": "13.3.4",
