--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@emotion/styled": "^11.10.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
-    "@prisma/client": "^4.14.0",
+    "@prisma/client": "^4.15.0",
     "autoprefixer": "10.4.14",
     "aws-sdk": "^2.1380.0",
     "axios": "^1.4.0",
@@ -35,12 +35,14 @@
     "next": "13.3.4",
     "pg": "^8.10.0",
     "postcss": "8.4.23",
-    "prisma": "^4.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-simplemde-editor": "^5.2.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "prisma": "^4.15.0"
   }
 }
