--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "emoji-picker-react": "^4.4.9",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
-    "formidable": "^2.1.1",
+    "formidable": "^2.1.2",
     "jotai": "^2.1.0",
     "material-ui-popup-state": "^5.0.8",
     "moment": "^2.29.4",
@@ -37,6 +37,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-medium-image-zoom": "^5.1.6",
     "react-simplemde-editor": "^5.2.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
