--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
+    "@emotion/weak-memoize": "^0.3.1",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.140",
     "@mui/material": "^5.12.3",
     "@prisma/client": "^4.15.0",
     "autoprefixer": "10.4.14",
@@ -41,9 +43,11 @@
     "react-simplemde-editor": "^5.2.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
+    "swiper": "^10.2.0",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.0.2",
     "prisma": "^4.15.0"
   }
 }
