--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma": {
+  "seed": "node prisma/seed.js"
+},
+
   },
   "dependencies": {
     "@aws-sdk/abort-controller": "^3.329.0",
