--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,3 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }],
-  "functions": {
-    "api/auth/*": {
-      "maxDuration": 10
-    }
-  }
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
